fix: canvas overflow

--- a/styles/App.scss
+++ b/styles/App.scss
@@ -48,18 +48,20 @@ canvas {
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
   width: 100vw;
   height: 100vh;
   overflow: auto;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  overflow-x: hidden;
   // pointer-events: none;
 }
 
 .container {
-  margin: 0 auto;
-  width: 100%;
+  margin: 0;
+  // width: 98vw;
   max-width: 100%;
   height: 100%;
   display: flex;
@@ -68,6 +70,7 @@ canvas {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .h3 {
